--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -11,7 +11,7 @@ body {
     width: 100%; 
 }
 
-.tab button {
+.tab button{
     background-color: inherit;
     float: left;
     border: none;
@@ -20,6 +20,17 @@ body {
     padding: 14px 16px;
     transition: 0.3s;
     font-size: 17px;
+}
+
+.tab.remaining {
+    background-color: inherit;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    font-size: 17px;
+    width:100%;
+    -webkit-app-region: drag;
 }
 
 .tab button:hover {
